# ledableton

./: .gitignore  CMakeLists.txt  README.md
lib/effect/: effect.cc  effect.h  grid.cc  grid.h  strip.cc  strip.h
lib/led-manager/: led-manager.h
lib/simulator/: simulator.cc
proto/: compile.sh  device.proto
svelte-test/: package-lock.json  package.json
svelte-test/src/: helper-functions.ts  types.ts
svelte-test/src/components/: DeviceColorIndicator.svelte  DeviceColorPicker.svelte  DevicePreview.svelte  DeviceTimeline.svelte  GrabBar.svelte  PreviewList.svelte  TimelineList.svelte
svelte-test/src/routes/: +page.svelte
web-interface/: package-lock.json  package.json  tsconfig.json
web-interface/public/: index.html
web-interface/src/: App.css  App.tsx  Icons.tsx  Previewer.css  Previewer.tsx  SplitView.css  SplitView.tsx  Timeline.css  Timeline.tsx  Types.tsx  index.css
web-interface/src/components/: DeviceColorPicker.svelte  Waveform.svelte
web-interface/src/lib/: device.ts  helper-functions.ts  stores.ts  types.ts
web-interface/src/lib/components/: AddDevice.svelte  AudioDisplay.svelte  BucketedVariableColumn.svelte  DeviceColorPicker.svelte  DeviceSelection.svelte  DeviceTimeline.svelte  DraggablePreview.svelte  FieldInput.svelte  GrabBar.svelte  Menu.svelte  Modal.svelte  PreviewArea.svelte  PreviewList.svelte  Select.svelte  SelectDevice.svelte  TimelineList.svelte  Waveform.svelte
web-interface/src/lib/components/add_device/: AddDevice.svelte  Bucket.svelte  BucketedVariableColumn.svelte  BucketedVariableColumns.svelte  CreateDevice.svelte  CreateDeviceObject.svelte  CreateObject.svelte  DevicePreview.svelte  FieldDisplay.svelte  FieldDisplayObject.svelte  FieldDisplayOneOf.svelte  FieldInput.svelte  FieldInputObject.svelte  SelectDevice.svelte
web-interface/src/lib/components/basic/: Checkbox.svelte  Labeled.svelte  Select.svelte  SplitInput.svelte
web-interface/src/lib/components/preview/: DeviceColorPicker.svelte  DevicePreview.svelte  DraggablePreview.svelte  PreviewArea.svelte
web-interface/src/lib/static/: device.proto  eye-dropper.cur
web-interface/src/protos/: device.proto
web-interface/src/routes/: +layout.svelte  +page.svelte  saved.js  styles.css
web-interface/src/routes/light-studio/: +page.svelte  +page.ts
web-interface/src/routes/wavey/: +page.svelte
(+9 files in other folders)
